# src/Domains/Courses/ViewModels/Api/CourseDetailViewModel.php
@@ -20,6 +20,7 @@ final class CourseDetailViewModel extends Data
         public int $id,
         public string $name,
         public string $term,
+        public bool $isSpecialProgramOnly,
         public ?string $descriptionUrl,
         public ?string $creditType,
         public ?int $credits,
@@ -53,6 +54,7 @@ final class CourseDetailViewModel extends Data
             id: $course->id,
             name: $course->name,
             term: $course->term,
+            isSpecialProgramOnly: $course->is_special_program_only,
             descriptionUrl: $course->description_url,
             creditType: $course->credit_type,
             credits: $course->credits,
